# first-opengl-project

./: .gitignore  CMakeLists.txt  README.md  camera.cpp  camera.h  cube.h  engine.cpp  engine.h  game_object.h  game_process_object.h  helper.h  input_manager.cpp  input_manager.h  main.cpp  main_game_object.cpp  main_game_object.h  mesh.h  model.cpp  model.h  physics_body.cpp  physics_body.h  physics_model_game_object.cpp  physics_model_game_object.h  physics_server.cpp  physics_server.h  process_object.h  resource_loader.cpp  resource_loader.h  shader.frag  shader.vert  shader_program.h  sphere_mesh.h  texture.cpp  texture.h  vcpkg-configuration.json  vcpkg.json
assets/ball/: ball.blend  ball.glb
core/: camera.cpp  camera.h  engine.cpp  engine.h  game_object.h  helper.cpp  helper.h  input_manager.cpp  input_manager.h  mesh.cpp  mesh.h  model.cpp  model.h  physics_body.cpp  physics_body.h  physics_server.cpp  physics_server.h  resource_loader.cpp  resource_loader.h  shader_program.cpp  shader_program.h  texture.cpp  texture.h  window.cpp  window.h
core/resource_loaders/: model_loader.cpp  model_loader.h  resource_format_loader.h  shader_program_loader.cpp  shader_program_loader.h  texture_loader.cpp  texture_loader.h
game/assets/ball/: ball.blend  ball.blend1  ball.glb
game/assets/shaders/: shader.frag  shader.shader
game/src/: ball_game_object.cpp  ball_game_object.h  main.cpp  main_game_object.cpp  main_game_object.h  physics_model_game_object.cpp  physics_model_game_object.h  player_game_object.cpp  player_game_object.h
src/: camera.cpp  camera.h  engine.cpp  input_manager.h  main.cpp  main_game_object.h  physics_body.h  physics_server.h  shader_program.h
src/game_objects/: player_game_object.cpp  player_game_object.h
